Updated README file

--- a/Deal_or_no_deal.ipynb
+++ b/Deal_or_no_deal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
     "        print(\"{: >4}{: >4}{: >4}{: >4}{: >4}{: >4}{: >4}\".format(*[\"xx\" if i.opened else i.index for i in self.cases[13:20] ]))\n",
     "        print(\"{: >6}{: >4}{: >4}{: >4}{: >4}{: >4}\".format(*[\"xx\" if i.opened else i.index for i in self.cases[20:26] ]))\n",
     "        print(\"-----------------------------------\")\n",
-    "        if self.round is not 0:\n",
+    "        if self.round != 0:\n",
     "            print(\"Your case is {}\".format(self.case_picked))\n",
     "        \n",
     "        sorted_cases = sorted(self.cases, key=lambda x: x.value)\n",
@@ -145,41 +145,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    xx  xx  xx  xx  xx  xx\n",
-      "  xx  xx  xx  xx  xx  xx  13\n",
-      "  xx  xx  xx  xx  xx  xx  20\n",
-      "    xx  xx  xx  xx  xx  xx\n",
+      "    xx  xx  xx   4  xx  xx\n",
+      "  xx  xx  xx  xx  xx  xx  xx\n",
+      "  xx  xx  xx  xx  xx  xx  xx\n",
+      "    xx  xx  xx  xx  25  xx\n",
       "-----------------------------------\n",
-      "Your case is 13\n",
+      "Your case is 4\n",
       "      xxxx      xxxx\n",
-      "      xxxx      xxxx\n",
-      "      xxxx      xxxx\n",
-      "      xxxx      xxxx\n",
-      "      xxxx     50000\n",
+      "      xxxx      5000\n",
       "      xxxx      xxxx\n",
       "      xxxx      xxxx\n",
       "      xxxx      xxxx\n",
       "      xxxx      xxxx\n",
       "      xxxx      xxxx\n",
-      "       400      xxxx\n",
+      "      xxxx      xxxx\n",
+      "       200      xxxx\n",
+      "      xxxx      xxxx\n",
+      "      xxxx      xxxx\n",
       "      xxxx      xxxx\n",
       "      xxxx      xxxx\n",
       "\n",
-      "The bank has offered you $17640.00.\n",
+      "The bank has offered you $1820.00.\n",
       "DEAL OR NO DEAL!\n",
-      "write \"d\" or \"n\"\n",
-      "n\n",
-      "Do you want to switch your case with number 20?\n",
-      "write (y)es or (n)o. \n",
-      "n\n",
-      "you have won $50000!\n"
+      "Do you want to switch your case with number 25?\n",
+      "you have won $5000!\n"
      ]
     }
    ],
@@ -217,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
